# openesm-py

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  test_utils.py
.github/: copilot-instructions
.github/workflows/: ci.yml  release.yml
src/openesm/: __init__.py  get_dataset.py  list_datasets.py  utils.py  zenodo.py
src/openesm_py/: __init__.py
tests/: conftest.py  test_get_dataset.py  test_list_datasets.py  test_utils.py  test_zenodo.py
