[project]
name = "openesm-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bjoern Siepe", email = "'bjoernsiepe@gmail.com'" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
